syntax = 'proto3';

package auth.v1;

option go_package = 'auth_v1';

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth Service API"
    version: "1.0.0"
    contact: {
      name: "DeFaNy"
      url: "t.me/defane"
    }
  }
  host: "localhost:8000"
  schemes: [
    HTTP,
    HTTPS
  ]
  consumes: "application/json"
  produces: "application/json"
};

service AuthService {
  // Login
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/auth/v1",
      body: "*",
    };
  }

  // Get new refresh token by old
  rpc GetRefreshToken(GetRefreshTokenRequest) returns (GetRefreshTokenResponse) {
    option (google.api.http) = {
      get: "/auth/v1/token",
    };
  }

  rpc GetAccessToken(GetAccessTokenRequest) returns (GetAccessTokenResponse) {
    option (google.api.http) = {
      get: "/auth/v1/token/access",
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
}

message GetRefreshTokenRequest {
  // Old refresh token
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  // New refresh token
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}